--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -1,9 +1,9 @@
-NAME: todos of today
+name: todos of today
 
 on:
-	push:
-		branches:
-			- master
+  push:
+    branches:
+      - master
 
 jobs:
   deploy:
@@ -11,22 +11,20 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      -name: Checkout
-       uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
       
-      -name: Configure AWS credentials
-       uses: aws-actions/configure-aws-credentials@v1
-       with:
-        aws-access-key-id: ${{ secrets.TEST_AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.TEST_AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-northeast-2
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.TEST_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.TEST_AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-northeast-2
       
-      -name: Deploy the client to the AWS S3
-       run: |
-         vue-cli-service build
-         aws s3 sync ./dist s3://todosoftoday
-         
-      -name: Deploy the server to the AWS EB
-       run: eb deploy
-
-         	
+      - name: Deploy the client to the AWS S3
+        run: |
+          vue-cli-service build
+          aws s3 sync ./dist s3://todosoftoday
+      
+      - name: Deploy the server to the AWS EB
+        run: eb deploy
