--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       
+      - name: Install vue cli
+        run: npm i @vue/cli
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
