--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -9,13 +9,33 @@ jobs:
   deploy:
     name: Deploying the client and the server on AWS
     runs-on: ubuntu-latest
-    
+
+    strategy:
+      matrix:
+        node-version: [12.x]
+        python-version: [3.7]
+  
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}  
+
       - name: Install vue cli
         run: npm i @vue/cli
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install awscli
+          pip install awsebcli
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
