--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Install vue cli
         run: npm i @vue/cli
-
+      
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
@@ -46,7 +46,7 @@ jobs:
       
       - name: Deploy the client to the AWS S3
         run: |
-          vue-cli-service build
+          npm run build
           aws s3 sync ./dist s3://todosoftoday
       
       - name: Deploy the server to the AWS EB
