--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -18,25 +18,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}  
 
-      - name: Install vue cli
-        run: npm i @vue/cli
+      - name: Install Node dependencies
+        run: npm install
       
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install awscli
-          pip install awsebcli
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
