--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -22,6 +22,16 @@ jobs:
       - name: Install Node dependencies
         run: npm install
       
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install awscli
+          pip install awsebcli
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -31,8 +41,12 @@ jobs:
       
       - name: Deploy the client to the AWS S3
         run: |
+          cd frontend
           npm run build
           aws s3 sync ./dist s3://todosoftoday
+          cd ..
       
       - name: Deploy the server to the AWS EB
-        run: eb deploy
+        run: |
+          cd backend
+          eb deploy
