--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -20,7 +20,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Node dependencies
-        run: npm install
+        run: |
+          cd frontend
+          npm install
+          cd ..
       
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
@@ -28,9 +31,11 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install Python dependencies
         run: |
+          cd backend
           python -m pip install --upgrade pip
           pip install awscli
           pip install awsebcli
+          cd ..
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
