--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -52,6 +52,11 @@ jobs:
           cd ..
       
       - name: Deploy the server to the AWS EB
-        run: |
-          cd backend
-          eb deploy
+        uses: einaregilsson/beanstalk-deploy@v10
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          application_name: todosoftoday
+          environment_name: todosoftoday-dev
+          version_label: 0.5
+          region: ap-northeast-2
