--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -27,7 +27,8 @@ jobs:
       - name: Install Python dependencies
         working-directory: ./backend
         run: |
-          pip install -r requirements.txt
+          pip install awscli
+          pip install awsebcli
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
